--- a/package.json
+++ b/package.json
@@ -16,10 +16,32 @@
     "url": "https://github.com/YJZhen/webpack-vue2-spa/issues"
   },
   "homepage": "https://github.com/YJZhen/webpack-vue2-spa#readme",
+  "dependencies": {
+    "vue": "^2.1.10",
+    "vue-router": "^2.2.0",
+    "vuex": "^2.0.0"
+  },
   "devDependencies": {
+    "axios": "^0.15.3",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-runtime": "^6.22.0",
+    "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.10.0",
+    "html-webpack-plugin": "^2.28.0",
+    "md5": "^2.2.1",
+    "node-sass": "^4.5.0",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "vue-loader": "^10.3.0",
-    "webpack": "^2.2.1"
+    "vue-resource": "^1.2.0",
+    "vue-style-loader": "^2.0.0",
+    "vue-template-compiler": "^2.1.10",
+    "webpack": "^2.1.0-beta.21"
   }
 }
