--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "webpack+vue2+vue-router2构单页面(SPA)应用",
   "main": "index.js",
   "scripts": {
-    "test": "Test success!"
+    "test": "Test success!",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --hot",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "repository": {
     "type": "git",
@@ -17,9 +19,8 @@
   },
   "homepage": "https://github.com/YJZhen/webpack-vue2-spa#readme",
   "dependencies": {
-    "vue": "^2.1.10",
-    "vue-router": "^2.2.0",
-    "vuex": "^2.0.0"
+    "vue": "^2.1.0",
+    "vue-resource": "^0.1.17"
   },
   "devDependencies": {
     "axios": "^0.15.3",
@@ -30,18 +31,24 @@
     "babel-runtime": "^6.22.0",
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
+    "es6-promise": "^4.0.5",
     "extract-text-webpack-plugin": "^1.0.1",
+    "fastclick": "^1.0.6",
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.28.0",
+    "isomorphic-fetch": "^2.2.1",
     "md5": "^2.2.1",
     "node-sass": "^4.5.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
+    "utils": "^0.3.1",
     "vue-loader": "^10.3.0",
-    "vue-resource": "^1.2.0",
-    "vue-style-loader": "^2.0.0",
-    "vue-template-compiler": "^2.1.10",
-    "webpack": "^2.1.0-beta.21"
+    "vue-router": "^2.0.1",
+    "vue-style-loader": "^1.0.0",
+    "vue-template-compiler": "^2.1.0",
+    "vuex": "^2.0.0",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1"
   }
 }
